<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <include layout="@layout/layout_center_viewpager"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/removeableLayout">

        <ImageView
            android:scaleType="fitXY"
            android:src="@drawable/background1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            app:srcCompat="@drawable/cabsyintro"
            android:id="@+id/logoImageView"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="WELCOME TO CABSY"
            android:fontFamily="@font/main"
            android:textColor="@color/light_black"
            android:textSize="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_marginTop="0dp"
            android:text="Need a Taxi, Go for Cabsy"
            android:fontFamily="@font/madeleina"
            android:textColor="@color/light_black"
            android:layout_below="@+id/logoImageView"
            android:textSize="36dp" />



        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:layout_width="390dp"
            android:layout_height="220dp"
            card_view:cardCornerRadius="13dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"
                android:paddingBottom="0dp"
                android:layout_height="match_parent">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GET CONNECTED WITH CABSY"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/main"
                    android:textColor="@color/darkgrey"
                    android:textSize="16dp" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="25dp"

                    android:id="@+id/textInputLayout1">
                    <EditText
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:padding="8dp"
                        android:width="400dp"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif"
                        android:id="@+id/emailEditText"
                        android:hint="Email" />
                </android.support.design.widget.TextInputLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordLayout"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/textInputLayout1">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textInputLayout2">
                        <EditText
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_password"
                            android:drawablePadding="10dp"
                            android:inputType="textPassword"
                            android:padding="8dp"
                            android:width="400dp"
                            android:background="@android:color/transparent"
                            android:textSize="16sp"
                            android:fontFamily="sans-serif"
                            android:layout_below="@+id/emailEditText"
                            android:id="@+id/passwordEditText"
                            android:hint="Password" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="LOG IN"
                        android:fontFamily="@font/madeleina"
                        android:background="@android:color/transparent"
                        android:layout_marginTop="3dp"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:layout_alignRight="@id/textInputLayout2"/>
                </RelativeLayout>



                <!-- Sign up with other -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="0dp"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/half_card">

                    <TextView
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Create Cabsy Account"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:background="@android:color/transparent"
                        android:textColor="@color/font"
                        android:textSize="16dp" />

                </RelativeLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>



    </RelativeLayout>
</merge>